--- a/.github/workflows/turing_chatvolt.yml
+++ b/.github/workflows/turing_chatvolt.yml
@@ -2,8 +2,8 @@ name: Turing to Chatvolt
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '45 */6 * * *'
+#  schedule:
+#    - cron: '45 */6 * * *'
 
 jobs:
   turing-chatvolt:
